--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="text-center mt-5">
                 <h1>What is the song in TikTok video</h1>
                 <p class="lead">TikTok to mp3 converter</p>
-                <p>Want to know song from any TikTok link ? Enter TikTok url below and get your song ! </p>
+                <p>Want to know song from any TikTok link ? Enter TikTok link below and get your song ! </p>
 
                 <form id="search-form" class="search-form relative" action="" method="GET" role="search">
                     <input id="k__input" type="search" name="k" class="search__input" autocomplete="off" autocorrect="off" aria-label="Search" placeholder="   Enter TikTok link here" value="">
